# aoe4-scout

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: aoe4world.ts  summary.ts
src/components/: AlliesPage.vue  HistoryAnalysis.vue  OpeningAnalysis.vue  PlayerCard.vue  ScoutPage.vue  TacticChart.vue
src/stores/: allies.ts  aoe4单位中文名对照表.md  history.ts  llm.ts  scout.ts  tactics.ts
src/types/: aoe4world.d.ts
src/utils/: civ.ts  country.ts  rank.ts
