[package]
name = "aoe4scout"
version = "0.3.0"
description = "AoE4 对局前侦查分析工具"
edition = "2021"

[lib]
name = "aoe4scout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
strip = true
